[tool.poetry]
name = "tha3"
version = "0.1.6"
description = "Python package for tha3"
authors = ["34j <34j.95a2p@simplelogin.com>", "Pramook Khungurn <dragonmeteor@gmail.com>"]
license = "MIT; CC-BY-4.0"
readme = "README.md"
repository = "https://github.com/34j/tha3"
documentation = "https://tha3.readthedocs.io"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
packages = [
    { include = "tha3", from = "src" },
]

[tool.poetry.scripts]
tha3 = "tha3.app.manual_poser:main"
tha3i = "tha3.app.ifacialmocap_puppeteer:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/34j/tha3/issues"
"Changelog" = "https://github.com/34j/tha3/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.8"
wxpython = "^4.2.1"
torch = "^2.0.1"
matplotlib = "^3.7.2"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3"
pytest = "^7.0"
pytest-cov = "^3.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
myst-parser = ">=0.16"
sphinx = ">=4.0"
sphinx-rtd-theme = ">=1.0"

[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:tool.poetry.version"
version_variable = "src/tha3/__init__.py:__version__"
build_command = "pip install poetry && poetry build"

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=tha3 --cov-report=term-missing:skip-covered"
pythonpath = ["src"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
    'if __name__ == "__main__":',
]

[tool.isort]
profile = "black"
known_first_party = ["tha3", "tests"]

[tool.autoflake]
expand_star_imports = true
remove_all_unused_imports = true

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
exclude = [
    'docs/.*',
    'setup.py',
]

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[[tool.mypy.overrides]]
module = "docs.*"
ignore_errors = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
